# Corfucinas

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: update-readme.yml  update-stats.yml
