[tool.poetry]
name = "corfucinas"
version = "0.1.0"
description = ""
authors = ["Corfucinas <53630064+Corfucinas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
